fix: update frontend code according to backend changes
